Adding linked_only query parameter to list resource provideres
